@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1674228: when assigning a slice (old-style), check for the
+  sq_ass_slice instead of the sq_slice slot.
+
 - When printing an unraisable error, don't print exceptions. before the name.
   This duplicates the behavior whening normally printing exceptions.
 
